# CMP2801-ShapeManipulator

./: CMakeLists.txt  main.cpp
src/: Command.cpp  Command.h  UserInput.cpp  UserInput.h
src/misc/command/: command.cpp  command.h
src/misc/input/: input.cpp  input.h
src/shapes/circle/: circle.cpp  circle.h
src/shapes/movable/: movable.cpp  movable.h
src/shapes/plane/: plane.cpp  plane.h
src/shapes/point/: point.cpp  point.h
src/shapes/rectangle/: rectangle.cpp  rectangle.h
src/shapes/shape/: shape.cpp  shape.h
src/shapes/square/: square.cpp  square.h
